<resources>
    <string name="app_name">EAD Mobile</string>

    <!--   NAVIGATION BAR   -->
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    <!--    SIGN-UP ACTIVITY    -->
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="user_icon">User Icon</string>
    <string name="email">Email</string>
    <string name="email_icon">Email Icon</string>
    <string name="password">Password</string>
    <string name="password_eye_icon">Password Eye Icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="calender_icon">Calender Icon</string>
    <string name="select_gender">Select Gender</string>
    <string name="already_have_an_account">Already have an account?\u00A0</string>
    <string name="sign_in_underline"><u>Sign In</u></string>

    <!--    SIGN-IN ACTIVITY    -->
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?\u00A0</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>

    <!--   ACCOUNT ACTIVITY    -->
    <string name="change_current_email">Change Current Email</string>
    <string name="toggle">Toggle</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="change">Change</string>
    <string name="update_account_details">Update Account Details</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="deactivate">Deactivate</string>
    <string name="logout">Logout</string>

    <!--   HOME ACTIVITY    -->
    <string name="search">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="banner_image">Banner Image</string>
    <string name="no_product">No products available at the moment. Please check back later!</string>
    <string name="search_error">No products found for \'%1$s\'. Please try a different search</string>

    <!--   PRODUCT DETAILS ACTIVITY    -->
    <string name="price_format">$%.2f</string>
    <string name="size">Size: </string>
    <string name="select_size">"Select Size</string>
    <string name="color">Color: </string>
    <string name="select_color">"Select Color</string>
    <string name="quantity">Quantity</string>
    <string name="minus_icon">Minus Icon</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="price">Price:</string>
    <string name="discount_price">Discount Price</string>
    <string name="brand">Brand: </string>
    <string name="category">Category: </string>
    <string name="stock_quantity">Stock Quantity: </string>
    <string name="cart_icon">Cart Icon</string>
    <string name="product_image">Product Image</string>

    <!--   CART ACTIVITY    -->
    <string name="total_price">Total Price: </string>
    <string name="place_order">Place Order</string>
    <string name="change_shipping">Change Shipping</string>
    <string name="cart_is_empty">Cart is Currently Empty</string>

    <!--   ORDER ACTIVITY    -->
    <string name="order_id">Order Id: </string>
    <string name="date">Date: </string>
    <string name="status">Status: </string>
    <string name="order_is_empty">Order List is Empty</string>
    <string name="order_image">Order Image</string>

    <!--   ORDER DETAILS ACTIVITY    -->
    <string name="name">Name: </string>
    <string name="order_date">Order Date: </string>
    <string name="order_status">Order Status: </string>
    <string name="total">Total: </string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_review">Add Review</string>

    <!--   VENDOR RANKING ACTIVITY    -->
    <string name="vendor_ranking">Vendor Ranking</string>
    <string name="add_comment">Add Comment</string>
    <string name="vendor_rating">Rating: </string>
    <string name="send">send</string>
    <string name="order_details">Order Details</string>

    <!--   SHIPPING DETAILS ACTIVITY    -->
    <string name="shipping_details">Shipping Details</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="add_shipping">Add Shipping</string>
    <string name="location_icon">Location Icon</string>
    <string name="city_icon">City Icon</string>
    <string name="state_icon">State Icon</string>
    <string name="postal_code_icon">Postal Code Icon</string>

    <!--    CANCEL ORDER ACTIVITY   -->
    <string name="reason_to_cancel">Reason to cancel</string>
    <string name="cancel">Cancel</string>
</resources>