<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="16dp"
    android:background="@color/LightGray"
    app:layoutDescription="@xml/activity_sign_in_scene"
    tools:context=".screen.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <!-- Sign In Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:fontFamily="@font/fugaz_one_regular"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp" />

        <!-- Email Field with Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_border"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/siEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black20"
                android:textColorHint="@color/black80"
                android:paddingHorizontal="6dp"
                android:minHeight="48dp"
                android:autofillHints="@null"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_email"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/email_icon"
                app:tint="@android:color/black" />
        </LinearLayout>

        <!-- Password Field with Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_border"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/siPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black20"
                android:textColorHint="@color/black80"
                android:paddingHorizontal="6dp"
                android:minHeight="48dp"
                android:autofillHints="@null"
                android:background="@android:color/transparent" />

            <ImageView
                android:id="@+id/siPasswordToggle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_open_eye"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/password_eye_icon"
                app:tint="@android:color/black"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <!-- Sign In Button -->
        <Button
            android:id="@+id/siBtnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="16dp"
            android:height="64dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background" />

        <!-- Don't Have an Account -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:minHeight="48dp"
                android:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/siSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_underline"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:focusable="true"
                android:clickable="true"
                android:minHeight="48dp"
                android:fontFamily="@font/roboto_regular" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>