<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shippingDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.ShippingDetailsActivity"
    android:background="@color/LightGray">

    <!-- App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sdToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_scrollFlags="scroll|enterAlways" >

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="58dp"
        android:scrollbars="none"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <!-- Shipping Details Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:fontFamily="@font/fugaz_one_regular"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp" />

            <!-- Shipping Address Field with Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edit_text_border"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/sdShippingAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/shipping_address"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black20"
                    android:textColorHint="@color/black80"
                    android:paddingHorizontal="6dp"
                    android:minHeight="48dp"
                    android:autofillHints="@null"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/location_icon"
                    app:tint="@android:color/black" />
            </LinearLayout>

            <!-- City Field with Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edit_text_border"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/sdCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    android:inputType="textShortMessage"
                    android:textColor="@color/black20"
                    android:textColorHint="@color/black80"
                    android:paddingHorizontal="6dp"
                    android:minHeight="48dp"
                    android:autofillHints="@null"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_city"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/city_icon"
                    app:tint="@android:color/black" />
            </LinearLayout>

            <!-- State Field with Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edit_text_border"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/sdState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/state"
                    android:inputType="textShortMessage"
                    android:textColor="@color/black20"
                    android:textColorHint="@color/black80"
                    android:paddingHorizontal="6dp"
                    android:minHeight="48dp"
                    android:autofillHints="@null"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_state"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/state_icon"
                    app:tint="@android:color/black" />
            </LinearLayout>

            <!-- Postal Code Field with Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edit_text_border"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/sdPostalCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/postal_code"
                    android:inputType="number"
                    android:textColor="@color/black20"
                    android:textColorHint="@color/black80"
                    android:paddingHorizontal="6dp"
                    android:minHeight="48dp"
                    android:autofillHints="@null"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_mail_box"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/postal_code_icon"
                    app:tint="@android:color/black" />
            </LinearLayout>

            <!-- Shipping Address Button -->
            <Button
                android:id="@+id/sdBtnShippingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_shipping"
                android:height="64dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>