<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="2dp"
    app:cardCornerRadius="12dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!--    Order ID     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_id"
                    android:textColor="@color/black20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black20"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--    Order Date     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/black20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cOrderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black20"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--    Total Price     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_price"
                    android:textColor="@color/black20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black20"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--    Order Status     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textColor="@color/black20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cOrderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primeGray"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!--    Order Image     -->
        <ImageView
            android:id="@+id/oProductImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_image"
            android:contentDescription="@string/order_image"
            android:clipToOutline="true" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
